<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/info"
        android:title="@string/barOpt1"
        android:icon="@drawable/ic_action_name"
        android:contentDescription="none"
        app:showAsAction="always"

        >
    </item>

    <item
        android:id="@+id/attack"
        android:title="@string/barOpt2"
        android:icon="@drawable/ic_attack"
        android:contentDescription="none"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/more"
        android:title="@string/barOpt3"
        android:icon="@drawable/ic_more"
        android:contentDescription="none"
        app:showAsAction="always"
        >
    </item>




</menu>