<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.login.OnBoardingFragment"
        android:background="@color/colorPrimary">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/ready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/roboto"
            android:text="@string/ready"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/rightguide"
            app:layout_constraintStart_toStartOf="@id/leftguide"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/iniOpcional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/roboto"
            android:text="@string/inicioOpcional"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/rightguide"
            app:layout_constraintStart_toStartOf="@id/leftguide"
            app:layout_constraintTop_toTopOf="@id/ready"/>

        <Button
            android:id="@+id/btnEmpezar"
            android:layout_marginTop="64dp"
            android:text="@string/letsStart"
            style="@style/buttonOutlinedBlue"
            app:layout_constraintEnd_toEndOf="@id/rightguide"
            app:layout_constraintStart_toStartOf="@id/leftguide"
            app:layout_constraintTop_toBottomOf="@+id/iniOpcional"/>

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/roboto"
            android:text="@string/txtIniciarSesion"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/rightguide"
            app:layout_constraintStart_toStartOf="@id/leftguide"
            app:layout_constraintTop_toBottomOf="@+id/btnEmpezar"/>

        <Button
            android:id="@+id/btnLogin"
            android:text="@string/btnLogIn"
            android:layout_marginTop="64dp"
            style="@style/buttonOutlinedWhite"
            app:layout_constraintEnd_toEndOf="@id/rightguide"
            app:layout_constraintStart_toStartOf="@id/leftguide"
            app:layout_constraintTop_toBottomOf="@+id/txtLogin"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftguide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightguide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>