<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.login.LoginSelectionFragment"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/getStarted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/carterone_regular"
            android:text="@string/txtGetStarted"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btnSignUp"
            style="@style/buttonOutlinedWhite"
            android:layout_marginTop="50dp"
            android:text="@string/btnSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/getStarted"/>

        <Button
            android:id="@+id/btnLogin"
            style="@style/buttonOutlinedWhite"
            android:layout_marginTop="10dp"
            android:text="@string/btnLogIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSignUp"/>

    </LinearLayout>
</layout>