<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.login.ResetPasswordFragment"
        android:background="@color/colorPrimary"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/tvlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/carterone_regular"
            android:text="@string/resetPass"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="@id/rightguide"
            app:layout_constraintStart_toStartOf="@id/leftguide"
            app:layout_constraintTop_toTopOf="@id/topguide"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etemail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:startIconDrawable="@drawable/ic_mail"
            app:hintTextColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/rightguide"
            app:layout_constraintStart_toStartOf="@id/leftguide"
            app:layout_constraintTop_toBottomOf="@id/tvlogin">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:theme="@style/lineET" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnreset"
            style="@style/buttonOutlinedBlue"

            android:layout_marginTop="30dp"
            android:text="@string/resetPass"
            app:layout_constraintEnd_toEndOf="@id/rightguide"
            app:layout_constraintStart_toStartOf="@id/leftguide"
            app:layout_constraintTop_toBottomOf="@id/etemail" />

        <Button
            android:id="@+id/btncancel"
            style="@style/buttonOutlinedWhite"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="@id/rightguide"
            app:layout_constraintStart_toStartOf="@id/leftguide"
            app:layout_constraintTop_toBottomOf="@id/btnreset" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftguide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightguide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9"/>
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topguide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".3"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


